# wiki_billionare_scrap_and_wrangling

./: .gitignore  Makefile  README.md  pyproject.toml  scrapy.cfg
crawl_billionaires/: scrapy.cfg
crawl_billionaires/crawl_billionaires/: items.py  middlewares.py  pipelines.py  settings.py
exploration/: explore_billionaires.ipynb
world_richest/: items.py  middlewares.py  pipelines.py  settings.py
world_richest/spiders/: billionaires.py  naira_rates.py
