[tool.poetry]
name = "wiki-billionare-scrap-and-wrangling"
version = "0.1.0"
description = "Lets get scrapy & wrangling fun by playing with wikipedia billionaire list"
authors = ["spaceofmiah"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
